--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@
 }
 
 .roomDetail h2 {
-  margin-bottom: 0.3rem;
+  margin-bottom: 1rem;
   font-size: 1rem;
 }
 .roomDetail > div {
@@ -181,6 +181,7 @@
   height: auto;
   object-fit: cover;
   border-radius: 0.8rem;
+  max-width:540px;
 }
 
 /* map */
